# alex-cli

./: README.md  pyproject.toml
alex_cli/: fmf.py  libfind.py  pdf2gem.py  vaultcli.py
